tests/errors/unclosed-string/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0018]: Unclosed string.
  │
  ├─𜱶 help: add a closing `"`.
  │
1 │ def greeting = "hello, world
  │                ^
  ╰─𜱶 tests/errors/unclosed-string/main.pa:1:16
